objects/Date__c.object
<CustomObject>
    <description>Test object. Used for CS dashboard.</description>
    <fields>
        <fullName>Accession__c</fullName>
        <label>Accession #</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kits__c</fullName>
        <label>Kits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sample_Count__c</fullName>
        <label>Sample Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Date</label>
    <nameField>
        <displayFormat>d-{000000000}</displayFormat>
        <label>Date Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>